AggUI/aggcpp/renderer.h

/*****************************************************************************/
/*  from agg_renderer.cpp                                                    */

//struct RendererCommon
struct RendererBase
{
    agg::scanline_u8        scanline;
    //pixfmt                  pixf;
    renderer_base_t           ren_base;
    
    int                     active_mask_component;
    
    typedef agg::scanline_u8_am<agg::alpha_mask_bgra32r> sl_alpha_mask_r;
    typedef agg::scanline_u8_am<agg::alpha_mask_bgra32g> sl_alpha_mask_g;
    typedef agg::scanline_u8_am<agg::alpha_mask_bgra32b> sl_alpha_mask_b;
    typedef agg::scanline_u8_am<agg::alpha_mask_bgra32a> sl_alpha_mask_a;
    
    agg::alpha_mask_bgra32r am_r;
    agg::alpha_mask_bgra32g am_g;
    agg::alpha_mask_bgra32b am_b;
    agg::alpha_mask_bgra32a am_a;
    
    sl_alpha_mask_r         sl_r;
    sl_alpha_mask_g         sl_g;
    sl_alpha_mask_b         sl_b;
    sl_alpha_mask_a         sl_a;
    
    RendererBase(pixfmt& pixf)
      : scanline(), ren_base(pixf),
        active_mask_component (-1),
        sl_r (am_r), sl_g (am_g), sl_b (am_b), sl_a (am_a)
    {
    }
};
/*****************************************************************************/

/* exported functions */

extern "C" DECLSPEC void RendererSolid_SetAlphaMask(
    RendererSolid* renderer,
    GraphicBufferBase* buffer,
    int component
);
extern "C" DECLSPEC void RendererSmooth_SetAlphaMask(
    RendererSmooth* renderer,
    GraphicBufferBase* buffer,
    int component
);
extern "C" DECLSPEC void RendererImage_SetAlphaMask(
    RendererImage* renderer,
    GraphicBufferBase* buffer,
    int component
);
extern "C" DECLSPEC void RendererGradient_SetAlphaMask(
    RendererGradient* renderer,
    GraphicBufferBase* buffer,
    int component
);
/* extern "C" DECLSPEC RendererSolid* RendererSolid_New( */
/*     AggBuffer* buffer */
/* ); */

extern "C" DECLSPEC void RendererSolid_Clear(
    RendererSolid* renderer,
    double r, double g, double b, double a
);
extern "C" DECLSPEC void RendererSolid_Color(
    RendererSolid* renderer,
    double r, double g, double b, double a
);
/* extern "C" DECLSPEC void RendererSolid_Delete( */
/*     RendererSolid* renderer */
/* ); */

/* extern "C" DECLSPEC RendererSmooth* RendererSmooth_New( */
/*     AggBuffer* buffer */
/* ); */

extern "C" DECLSPEC void RendererSmooth_Color(
    RendererSmooth* renderer,
    double r, double g, double b, double a
);
extern "C" DECLSPEC void RendererSmooth_Setup(
    RendererSmooth* renderer,
    double r1, double r2,
    double xx, double xy,
    double yx, double yy,
    double tx, double ty
);
extern "C" DECLSPEC void RendererSmooth_AddPath(
    RendererSmooth* renderer,
    Path* path
);
/* extern "C" DECLSPEC void RendererSmooth_Delete( */
/*     RendererSmooth* renderer */
/* ); */

/* extern "C" DECLSPEC RendererImage* RendererImage_New( */
/*     AggBuffer* buffer */
/* ); */

extern "C" DECLSPEC void RendererImage_Matrix(
    RendererImage* renderer,
    double xx, double xy,
    double yx, double yy,
    double tx, double ty
);
/* extern "C" DECLSPEC void RendererImage_Source1( */
/*     RendererImage* renderer, */
/*     AggBuffer* buffer */
/* ); */

extern "C" DECLSPEC void RendererImage_AttachSource(
    RendererImage* renderer,
    unsigned char* buffer,
    int dx, int dy,
    int stride
);
extern "C" DECLSPEC void RendererImage_SetStretchMode(
    RendererImage* renderer,
    int mode,
    double radius
);
/* extern "C" DECLSPEC void RendererImage_Delete( */
/*     RendererImage* renderer */
/* ); */

/* extern "C" DECLSPEC RendererGradient* RendererGradient_New( */
/*     AggBuffer* buffer */
/* ); */

/* extern "C" DECLSPEC void RendererGradient_Delete( */
/*     RendererGradient* renderer */
/* ); */

extern "C" DECLSPEC void RendererGradient_Select(
    RendererGradient* renderer,
    int id
);
extern "C" DECLSPEC void RendererGradient_Range(
    RendererGradient* renderer,
    double r1, double r2
);
extern "C" DECLSPEC void RendererGradient_Matrix(
    RendererGradient* renderer,
    double xx, double xy,
    double yx, double yy,
    double tx, double ty
);
extern "C" DECLSPEC void RendererGradient_Color1(
    RendererGradient* renderer,
    const double r[256],
    const double g[256],
    const double b[256],
    const double a[256]
);
extern "C" DECLSPEC void RendererFill4Colors(
    RendererBase* renderer,
    int x, int y,
    int dx, int dy,
    double r1, double g1, double b1,
    double r2, double g2, double b2,
    double r3, double g3, double b3,
    double r4, double g4, double b4
);