AggUI/Native.cs


        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererFill4Colors(
            IntPtr renderer,
            int x,
            int y,
            int dx,
            int dy,
            double r1,
            double g1,
            double b1,
            double r2,
            double g2,
            double b2,
            double r3,
            double g3,
            double b3,
            double r4,
            double g4,
            double b4
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererSolid_Clear(
            IntPtr renderer,
            double r,
            double g,
            double b,
            double a
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererSolid_Color(
            IntPtr renderer,
            double r,
            double g,
            double b,
            double a
        );

        /* [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)] */
        /* public static extern void RendererSolid_SetAlphaMask(IntPtr renderer, IntPtr buffer, int component); */

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererSmooth_Color(
            IntPtr renderer,
            double r,
            double g,
            double b,
            double a
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererSmooth_Setup(
            IntPtr renderer,
            double r1,
            double r2,
            double xx,
            double xy,
            double yx,
            double yy,
            double tx,
            double ty
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererSmooth_AddPath(IntPtr renderer, IntPtr path);

        /* [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)] */
        /* public static extern void RendererSmooth_SetAlphaMask(IntPtr renderer, IntPtr buffer, int component); */

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererImage_Matrix(
            IntPtr renderer,
            double xx,
            double xy,
            double yx,
            double yy,
            double tx,
            double ty
        );

        /* [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)] */
        /* public static extern void RendererImage_Source1(IntPtr renderer, IntPtr buffer); */

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererImage_AttachSource(
            IntPtr renderer,
            [In] byte[] byte_buffer,
            int dx,
            int dy,
            int stride
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererImage_SetStretchMode(
            IntPtr renderer,
            int mode,
            double radius
        );

        /* [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)] */
        /* public static extern void RendererImage_SetAlphaMask(IntPtr renderer, IntPtr buffer, int component); */

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererGradient_Select(IntPtr renderer, int id);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererGradient_Color1(
            IntPtr renderer,
            double[] r,
            double[] g,
            double[] b,
            double[] a
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererGradient_Range(IntPtr renderer, double r1, double r2);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void RendererGradient_Matrix(
            IntPtr renderer,
            double xx,
            double xy,
            double yx,
            double yy,
            double tx,
            double ty
        );

        /* [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)] */
        /* public static extern void RendererGradient_SetAlphaMask(IntPtr renderer, IntPtr buffer, int component); */

        #endregion

        #region Font
        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr FreetypeInfo_CreateLibrary();

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr FreetypeInfo_LoadFromFile(
            IntPtr library,
            [MarshalAs(UnmanagedType.LPStr)] string font_name
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FreetypeInfo_IsFaceBold(IntPtr face);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FreetypeInfo_IsFaceItalic(IntPtr face);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern uint FreetypeInfo_GetCharIndex(IntPtr face, ulong charcode);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double FreetypeInfo_GetGlyphAdvance(
            IntPtr face,
            uint glyph_index,
            double size
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void FreetypeInfo_GetGlyphBBox(
            IntPtr face,
            uint glyph_index,
            double size,
            out double xMin,
            out double xMax,
            out double yMin,
            out double yMax
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double FreetypeInfo_GetKerning(
            IntPtr face,
            uint left_glyph,
            uint right_glyph,
            double size
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double FreetypeInfo_GetAscender(IntPtr face, double size);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double FreetypeInfo_GetDescender(IntPtr face, double size);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double FreetypeInfo_GetHeight(IntPtr face, double size);
        #endregion

        #region FontManager

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr FontManager_New();

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FontManager_LoadFont(
            IntPtr fm,
            [MarshalAs(UnmanagedType.LPStr)] string font_name
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void FontManager_SetFontSize(IntPtr fm, double size);
        #endregion

        #region GraphicBuffer

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr GraphicBuffer_NewGraphicBuffer(
            uint width,
            uint height,
            int stride,
            IntPtr fm
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void GraphicBuffer_DeleteGraphicBuffer(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr GraphicBuffer_NewGraphicBufferExternalData(
            IntPtr data_buffer,
            uint width,
            uint height,
            int stride,
            IntPtr fm
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void GraphicBuffer_DeleteGraphicBufferExternalData(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr GraphicBuffer_GetGraphicContext(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern uint GraphicBuffer_GetWidth(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern uint GraphicBuffer_GetHeight(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern int GraphicBuffer_GetStride(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern uint GraphicBuffer_GetBufferLength(IntPtr gbuff);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void GraphicBuffer_GetBufferData(
            IntPtr gbuff,
            [MarshalAs(UnmanagedType.LPArray)] [In, Out] byte[] output_buffer
        );
        #endregion

        #region GraphicContext

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void GraphicContext_SetColor(
            IntPtr gctx,
            double r,
            double g,
            double b,
            double a
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern void GraphicContext_DrawEllipse(
            IntPtr gctx,
            double x,
            double y,
            double rx,
            double ry
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double GraphicContext_DrawChar(
            IntPtr gctx,
            char character,
            double x,
            double y
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double GraphicContext_DrawText(
            IntPtr gctx,
            [MarshalAs(UnmanagedType.LPStr)] string text,
            double x,
            double y
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern double GraphicContext_DrawGlyph(
            IntPtr gctx,
            uint glyph,
            double x,
            double y
        );

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr GraphicContext_GetSolidRenderer(IntPtr gctx);

        [DllImport(LibAgg, CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
        public static extern IntPtr GraphicContext_GetSmoothRenderer(IntPtr gctx);
